configure surefire to load native tesseract library